# bitcoin-tx-verify

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: check_lint_build.yaml
src/: lib.rs
stubs/: bitcoin-script.cpp
