[package]
name = "bitcoin-tx-verify"
version = "0.1.2"
authors = ["benthecarman <ben@taprootwizards.com>"]
description = "Minimal bitcoin transaction verifier with OP_CAT support"
license = "MIT"
documentation = "https://docs.rs/bitcoin-tx-verify"
homepage = "https://github.com/taproot-wizards/bitcoin-tx-verify"
repository = "https://github.com/taproot-wizards/bitcoin-tx-verify"
edition = "2021"
exclude = [
    "depends/bitcoin/src/tests/*",
    "depends/bitcoin/src/bench/*",
    "depends/bitcoin/src/qt/*",
    "depends/bitcoin/test/*",
    "*.py",
    "*.json",
    # Keep these autotool files
    "!depends/bitcoin/test/config.ini.in",
    "!depends/bitcoin/contrib/filter-lcov.py",
    "!depends/bitcoin/test/functional/test_runner.py",
    "!depends/bitcoin/test/fuzz/test_runner.py",
    "!depends/bitcoin/test/util/test_runner.py",
    "!depends/bitcoin/test/util/rpcauth-test.py",
    "!depends/bitcoin/src/qt/Makefile",
    "!depends/bitcoin/src/qt/test/Makefile"
]

[build-dependencies]
cc = "1.0.101"

[dependencies]
bitcoin = { version = "0.32.2", features = ["rand", "serde"] }
libc = "0.2.155"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
bitcoin = { version = "0.32.2", features = ["bitcoinconsensus"] }
